--- a/6-data-manipulation.qmd
+++ b/6-data-manipulation.qmd
@@ -231,29 +231,29 @@ There are a couple of data object types that have a special characteristic in th
 
 **Data frames can have different vector types arranged by column** but there is a constraint that each vector must be the same length, that is, **each ROW is considered an observation for each variable value** (though there may be missing data coded by `NA`).
 
-There are a few ways to think about selecting values in a data frame.  The first is simply to access values through the variable names, which can either be done by using the data frame name with the `$` operator and the variable name, or by using the `[ , ]` syntax with either the variable name or the column number of the variable of interest [see here](https://dsgarage.netlify.app/bootcamp/1.4-m1-data-frames/#anchor-5).
+There are a few ways to think about selecting values in a data frame.  The first is simply to access values through the variable names, which can either be done by using the data frame name with the `$` operator and the variable name, or by using the `[ , ]` syntax with either the variable name or the column number of the variable of interest [see here](https://rstats-bootcamp.github.io/website/5-data-frames.html#the-index-operator).
 
 A second powerful way to access variables in a data frame is by selecting particular rows of a data frame.  This may be done by selecting the rows of a data based on values of one or more variables.  We will practice doing this using `which()`, the `[ , ]` syntax, and boolean phrases is the following code block.
 
-For the following section, we will use the `OrchardSprays` dataset that exists as a data frame in the in-built `{datasets}` package. You can use `help(OrchardSprays)` to see the help page (the help page is characteristically terse, so some description is given here. 
+For the following section, we will use the `OrchardSprays` dataset that exists as a data frame in the in-built `{datasets}` package. You can use `help(OrchardSprays)` to see the help page (the help page is characteristically terse, so some description is given here). 
 
 <br>
 
-**The OrchardSprays experiment**
+### 4.1 `OrchardSprays` data
 
 This is a classic dataset based on [an experiment looking at how a chemical additive could be used to deter honeybees from being attracted to crops and subsequently killed by pesticides](https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1744-7348.1943.tb06173.x). 
 
-The experiment involved having a treatment consisting of adding a "lime sulphur emulsion" (honeybee deterrent) in increasing concentrations to a sucrose solution.  **The `treatment` variable** had 8 levels including a control (no deterrent) and 7 other levels with increasing concentration of the deterrent. The treatment levels were named A (the highest amount of deterrent), B (second highest deterrent) through to G (lowest deterrent) and H (control - no deterrent) **The decrease variable** was a measure of the quantity of sucrose solution that was taken by honeybees (the prediction here is that higher concentrations of the deterrent should result in a lower decrease in the sucrose solution).
+The experiment involved having a `treatment` consisting of adding a "lime sulfur emulsion" (honeybee deterrent) in increasing concentrations to a sucrose solution.  **The `treatment` variable** had 8 levels including a control (no deterrent) and 7 other levels with increasing concentration of the deterrent. The treatment levels were named A (the highest amount of deterrent), B (second highest deterrent) through to G (lowest deterrent) and H (control - no deterrent) **The `decrease` variable** was a measure of the quantity of sucrose solution that was taken by honeybees (the prediction here is that higher concentrations of the deterrent should result in a lower decrease in the sucrose solution).
 
-The experiment involved a [Latin Square](https://en.wikipedia.org/wiki/Latin_square) design, with the order of the 8 treatments arranged randomly in an array of 8 columns (the purpose of this design is to randomize any effect of the treatment ORDER or POSITION on the response variable).  This resulted in an 8 row by 8 column experiment.  The response was measured after placing 100 honeybees into an experimental chamber with the 64 containers of sucrose solution.
+The experiment involved a [Latin Square](https://en.wikipedia.org/wiki/Latin_square) design, with the order of the 8 treatments arranged randomly in an array of 8 columns (the purpose of this design is to randomize any effect of the `treatment` ORDER or POSITION on the response variable).  This resulted in an 8 row by 8 column experiment.  The response was measured after placing 100 honeybees into an experimental chamber with the 64 containers of sucrose solution.
 
 <br>
 
 ```r
 ## OrchardSprays ####
 ## Understand the data - an important step
-# Try this
 
+# Try this
 # Load the OrchardSpray data using the data() function
 data(OrchardSprays) # Should see OrchardSprays <promise> in the Global Env.
 
@@ -284,7 +284,7 @@ plot(x = OrchardSprays$colpos,  # NB use of $ syntax to access data
 ```
 <br>
 
-**Practice selecting parts a data frame**
+### 4.2 Practice selecting parts a data frame
 
 Selecting particular parts of a data frame based on the values of **one variable** is a common and extremely useful task.
 
@@ -292,8 +292,10 @@ Selecting particular parts of a data frame based on the values of **one variable
 ## Practice selecting parts a data frame ####
 
 # Select the rows of the dataset for treatment "D"
+
 # (Pseudocode steps to solve) 
 # Break it down to make small steps easy to read
+
 # 01 Boolean phrase to identify rows where treatment value is "D"
 # 02 which() to obtain index of TRUE in boolean vector
 # 03 Exploit [ , ] syntax with data frame object to slice out rows
@@ -315,7 +317,7 @@ OrchardSprays[my_selection, ]
 
 <br>
 
-**Selection based on more than one variable value**
+### 4.3 Selection based on more than one variable value
 
 Using the basic building blocks of boolean selection, more complex rules for selecting data can be made.
 
@@ -360,11 +362,9 @@ OrchardSprays[my_selec2, ] # Double check it works and is similar to expectation
 
 <br>
 
-### 1.5.4 Using aggregate()
+## 5 `aggregate()` function
 
-**The aggregate() function**
-
-We often may wish to summarise parts of a data set according to some index of variable values.  A very convenient tool for the is the `aggregate()` function, which we will practice here.
+We often may wish to summarize parts of a data set according to some index of variable values.  A very convenient tool for the is the `aggregate()` function, which we will practice here.
 
 ```r
 help(aggregate)
@@ -459,9 +459,9 @@ axis(side = 1,
 
 <br>
 
-### 1.5.5 Practice exercises
+## 6 Practice exercises
 
-For the following exercises, use the trees dataset, which has Girth, Height and Volume variables for 31 Black Cherry trees.
+For the following exercises, use the `trees` dataset built into `R`, which has `Girth`, `Height` and `Volume` variables for 31 Black Cherry trees.
 
 ```r
 # Examine the data
@@ -472,36 +472,46 @@ str(trees)
 
 <br>
 
-**1** Show code to calculate the mean Girth of Black Cherry trees with Height less than 75 ft.
+### 6.1 
+
+Show code to calculate the mean `Girth` of Black Cherry trees with `Height` less than 75 ft.
 
 <br>
 
-**2** Use `help(cut)` and then use the `cut()` function to create a new factor variable based on the `Height` numeric variable in the `trees` dataset. Try setting the `breaks` argument to 2 or 3.  Rename the levels of your new factor to something meaningful.  Show the code.  
+### 6.2
+
+Use `help(cut)` and then use the `cut()` function to create a new factor variable based on the `Height` numeric variable in the `trees` dataset. Try setting the `breaks` argument to 2 or 3.  Rename the levels of your new factor to something meaningful.  Show the code.  
 
 <br>
 
-**3** Using the new factor from question 2, use `aggregate()` to calculate the mean and standard deviation of all three variables in the `trees` data.  Show your code and report the results to 2 decimal points of accuracy.
+### 6.3
+
+Using the new factor from question 2, use `aggregate()` to calculate the mean and standard deviation of all three variables in the `trees` data.  Show your code and report the results to 2 decimal points of accuracy.
 
 <br>
 
-**4** Show the code using which() and boolean phrases as appropriate to find the rows in the `trees` dataset where Girth is higher than 11 and Height is lower than 75.
+### 6.4
+
+Show the code using `which()` and boolean phrases as appropriate to find the rows in the `trees` dataset where `Girth` is higher than 11 and `Height` is lower than 75.
 
 
 <br>
 
-**5** Run the following code:
+### 6.5
+
+Run the following code:
 ```r
 data_1 <- data.frame(volume = c(4,5,6,5,6,7,6,5,6,8,7,3,8,7,NA,10),
            population = c("A","A","A","A","A","A","A","A",
            "B","B","B","B","B","B","B","B"))
 ```
-Use `aggregate()` to calculate the mean of volume for each population (hint: you may need to use help for the functions involved and pay close attention to your data frame...).
+Use `aggregate()` to calculate the mean of `volume` for each `population` (hint: you may need to use help for the functions involved and pay close attention to your data frame...).
 
 <br>
 
-**6** Write a plausible practice question involving any aspect of using `which()`, boolean phrases and/or `aggregate()` involving the in-built R dataset `iris`.
+### 6.6
 
-<br>
+Write a plausible practice question involving any aspect of using `which()`, boolean phrases and/or `aggregate()` involving the in-built `R` dataset `iris`.
 
 <br>
 
