--- a/schedule.qmd
+++ b/schedule.qmd
@@ -12,47 +12,47 @@ For all of the lab pages it is intended that you type and run 100% of the code i
 
 <br>
 
-+------------------------------------------------------------------------------------------------------------------------------------+
-| Topics                                                                                                                             |
-+====================================================================================================================================+
-| [![](img/slides.png){width="18" height="20"}](slides-overview.html) ![](img/youtube.png){width="30" height="20"} Bootcamp overview |
-+------------------------------------------------------------------------------------------------------------------------------------+
-| **Module 1: R scripting**                                                                                                          |
-|                                                                                                                                    |
-| 1 R and RStudio Setup                                                                                                              |
-|                                                                                                                                    |
-| 2 R language                                                                                                                       |
-|                                                                                                                                    |
-| 3 Functions and packages                                                                                                           |
-|                                                                                                                                    |
-| 4 Data objects                                                                                                                     |
-|                                                                                                                                    |
-| 5 Data frames                                                                                                                      |
-|                                                                                                                                    |
-| 6 Data sub-setting and manipulation                                                                                                |
-+------------------------------------------------------------------------------------------------------------------------------------+
-| **Module 2: Statistics review**                                                                                                    |
-|                                                                                                                                    |
-| 7 Question, explore, analyze                                                                                                       |
-|                                                                                                                                    |
-| 8 Sampling distributions                                                                                                           |
-|                                                                                                                                    |
-| 9 Correlation                                                                                                                      |
-|                                                                                                                                    |
-| 10 Simple linear regression                                                                                                        |
-|                                                                                                                                    |
-| 11 T-test                                                                                                                          |
-|                                                                                                                                    |
-| 12 1-way ANOVA                                                                                                                     |
-+------------------------------------------------------------------------------------------------------------------------------------+
-| **Module 3: reproducibility, collaboration**                                                                                       |
-|                                                                                                                                    |
-| 13 Reproducibility                                                                                                                 |
-|                                                                                                                                    |
-| 14 Automate reports                                                                                                                |
-|                                                                                                                                    |
-| 15 Git and version control                                                                                                         |
-+------------------------------------------------------------------------------------------------------------------------------------+
++------------------------------------------------------------------------------------------------+
+| Topics                                                                                         |
++================================================================================================+
+| ![](img/slides.png){width="18" height="20"} ![](img/youtube.png){width="30"} Bootcamp overview |
++------------------------------------------------------------------------------------------------+
+| **Module 1: R scripting**                                                                      |
+|                                                                                                |
+| 1 R and RStudio Setup                                                                          |
+|                                                                                                |
+| 2 R language                                                                                   |
+|                                                                                                |
+| 3 Functions and packages                                                                       |
+|                                                                                                |
+| 4 Data objects                                                                                 |
+|                                                                                                |
+| 5 Data frames                                                                                  |
+|                                                                                                |
+| 6 Data sub-setting and manipulation                                                            |
++------------------------------------------------------------------------------------------------+
+| **Module 2: Statistics review**                                                                |
+|                                                                                                |
+| 7 Question, explore, analyze                                                                   |
+|                                                                                                |
+| 8 Sampling distributions                                                                       |
+|                                                                                                |
+| 9 Correlation                                                                                  |
+|                                                                                                |
+| 10 Simple linear regression                                                                    |
+|                                                                                                |
+| 11 T-test                                                                                      |
+|                                                                                                |
+| 12 1-way ANOVA                                                                                 |
++------------------------------------------------------------------------------------------------+
+| **Module 3: reproducibility, collaboration**                                                   |
+|                                                                                                |
+| 13 Reproducibility                                                                             |
+|                                                                                                |
+| 14 Automate reports                                                                            |
+|                                                                                                |
+| 15 Git and version control                                                                     |
++------------------------------------------------------------------------------------------------+
 
 <br> <br>
 
