--- a/1-setup.qmd
+++ b/1-setup.qmd
@@ -10,7 +10,7 @@ title: "1 Setup & intro"
 
 <br>
 
-This page is intended to guide people during their first installation and use of R and RStudio. 
+This page is intended to guide people during their first installation and use of R and RStudio.
 
 <br>
 
@@ -257,4 +257,4 @@ sd(my_variable)
 
 ![](img/HDS.png){fig-alt="Harper Data Science" width="125"}
 
-This module supports students and staff at [Harper Adams University](https://www.harper-adams.ac.uk/ "Harper Adams University") and the [MSc in Data Science for Global Agriculture, Food, and Environment](https://www.harper-adams.ac.uk/courses/postgraduate/201194/data-science-for-global-agriculture-food-and-environment "MSc in Data Science") led by [Ed Harris](https://www.harper-adams.ac.uk/general/staff/profile/201620/Edwin-Harris/ "Ed's Faculty page").
+This website supports students and staff at [Harper Adams University](https://www.harper-adams.ac.uk/ "Harper Adams University") and the [MSc in Data Science for Global Agriculture, Food, and Environment](https://www.harper-adams.ac.uk/courses/postgraduate/201194/data-science-for-global-agriculture-food-and-environment "MSc in Data Science") led by [Ed Harris](https://www.harper-adams.ac.uk/general/staff/profile/201620/Edwin-Harris/ "Ed's Faculty page").
