--- a/7-question-explore.qmd
+++ b/7-question-explore.qmd
@@ -508,7 +508,9 @@ Make a fully labelled boxplot of the `pct` variable as a function of `treatment`
 
 <br>
 
-### 7.5 (hard: may require tinkering and problem solving) 
+### 7.5 
+
+(hard: may require tinkering and problem solving) 
 
 Experiment making a boxplot showing `pct ~ treatment` separated for each trial
 
@@ -525,4 +527,4 @@ Write a plausible practice question involving `aggregate()` and `boxplot()` in-b
 
 ![](img/HDS.png){fig-alt="Harper Data Science" width="125"}
 
-This module supports students and staff at [Harper Adams University](https://www.harper-adams.ac.uk/ "Harper Adams University") and the [MSc in Data Science for Global Agriculture, Food, and Environment](https://www.harper-adams.ac.uk/courses/postgraduate/201194/data-science-for-global-agriculture-food-and-environment "MSc in Data Science") led by [Ed Harris](https://www.harper-adams.ac.uk/general/staff/profile/201620/Edwin-Harris/ "Ed's Faculty page").
+This website supports students and staff at [Harper Adams University](https://www.harper-adams.ac.uk/ "Harper Adams University") and the [MSc in Data Science for Global Agriculture, Food, and Environment](https://www.harper-adams.ac.uk/courses/postgraduate/201194/data-science-for-global-agriculture-food-and-environment "MSc in Data Science") led by [Ed Harris](https://www.harper-adams.ac.uk/general/staff/profile/201620/Edwin-Harris/ "Ed's Faculty page").
