--- a/2-r-lang.qmd
+++ b/2-r-lang.qmd
@@ -306,7 +306,7 @@ TRUE & TRUE # both phrases are the same and true, TRUE
 
 3 > 1 & 1 < 5 # both phrases are true
 
-# Are both phrases true?
+# Are these phrases true?
 
 TRUE & FALSE # are both true?
 
