--- a/1-setup.qmd
+++ b/1-setup.qmd
@@ -36,7 +36,7 @@ Here is what we will work on:
 
 The `R` Stats Bootcamp aims to provide practical, open instructional materials to support learning the `R` programming language, to review simple statistics in `R`, and to introduce reproducibility and collaboration tools. The content is a blend of practical, referenced material with videos and self-assessment.
 
-We also a have a [friendly community Slack channel](https://join.slack.com/t/hadatascience/shared_invite/zt-ekigo1t3-0ADgafsF6zTDwJ9SxIws9w) - go over and introduce yourself and say hi!
+We also a have a [friendly community Slack channel](https://join.slack.com/t/ha-eda-party/shared_invite/zt-w19od3dz-6bjo~dTC_GQeSUUv3B8XzQ) - go over and introduce yourself and say hi!
 
 <br>
 
